@@ -15,6 +15,9 @@ core 2.2.1 - not released yet
 	* Added: TodoyuFormElement_Button functions: setText(), setClass(), setOnClick()
 	* Added: Option $asAttachment for TodoyuFileManager::sendFile() and TodoyuHeader::sendDownloadHeaders() to send also files directly
 	* Added: Try to auto detect the mime type in TodoyuFileManager::sendFile() when not defined
+	* Added: Params config value for FormRecords object which is submitted with the auto completer request. Allows passing options to the search
+	* Added: TodoyuFormManager::addFieldType(). Cleaner replacement for form field type config like Todoyu::$CONFIG['FORM']['TYPES']['text'] = array(...)
+	* Added: TodoyuFormManager::addFieldTypeRecords() as shortcut to TodoyuFormManager::addFieldType() with default records template
 	* Changed: Use js version instead of php the check for the first input in form
 	* Changed: Update form XSD validation to match know field types only
 	* Changed: Created instances for parsing form xml files to prevent overlapping when multiple forms are parsed parallel
